[project]
name = "symbolic-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastparquet>=2025.12.0",
    "ipython>=9.10.0",
    "jax>=0.9.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
[tool.uv]
environments = ["sys_platform == 'linux'"]
